Separate the build of grammarinator-generate and decode in C++

--- a/grammarinator-cxx/CMakeLists.txt
+++ b/grammarinator-cxx/CMakeLists.txt
@@ -8,9 +8,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(grammarinator-cxx CXX)
 
-option(GRAMMARINATOR_TOOLS "build tool artefacts" OFF)
-option(GRAMMARINATOR_GRLF "build libgrlf" OFF)
+option(GRAMMARINATOR_GENERATE "build generator tool" OFF)
+option(GRAMMARINATOR_DECODE "build decoder tool" OFF)
 option(GRAMMARINATOR_FUZZNULL "build fuzznull tool" OFF)
+option(GRAMMARINATOR_GRLF "build libgrlf" OFF)
 
 set(GRAMMARINATOR_GENERATOR "" CACHE STRING "name of the generator class created by grammarinator-process (mandatory for specialized artefacts)")
 set(GRAMMARINATOR_MODEL "" CACHE STRING "name of the decision model class (for specialized artefacts)")
@@ -64,11 +65,12 @@ if(GRAMMARINATOR_FUZZNULL)
 endif()
 
 grammarinator_status(GRAMMARINATOR_VERSION)
-grammarinator_status(GRAMMARINATOR_TOOLS)
-grammarinator_status(GRAMMARINATOR_GRLF)
+grammarinator_status(GRAMMARINATOR_GENERATE)
+grammarinator_status(GRAMMARINATOR_DECODE)
 grammarinator_status(GRAMMARINATOR_FUZZNULL)
+grammarinator_status(GRAMMARINATOR_GRLF)
 
-if(GRAMMARINATOR_TOOLS OR GRAMMARINATOR_GRLF OR GRAMMARINATOR_FUZZNULL)
+if(GRAMMARINATOR_GENERATE OR GRAMMARINATOR_DECODE OR GRAMMARINATOR_FUZZNULL OR GRAMMARINATOR_GRLF)
   if ("${GRAMMARINATOR_SUFFIX}" STREQUAL "")
     set(GRAMMARINATOR_SUFFIX "${GRAMMARINATOR_GENERATOR}")
     string(TOLOWER "${GRAMMARINATOR_SUFFIX}" GRAMMARINATOR_SUFFIX)
@@ -115,6 +117,6 @@ add_subdirectory(libgrammarinator)
 if(GRAMMARINATOR_GRLF)
   add_subdirectory(libgrlf)
 endif()
-if(GRAMMARINATOR_TOOLS OR GRAMMARINATOR_FUZZNULL)
+if(GRAMMARINATOR_GENERATE OR GRAMMARINATOR_DECODE OR GRAMMARINATOR_FUZZNULL)
   add_subdirectory(tools)
 endif()
